--- a/boutique/medium/digital-numerique/index.html
+++ b/boutique/medium/digital-numerique/index.html
@@ -55,7 +55,7 @@
     <article>
 
       <ul class="type-product polyptych">
-        <li class="has-post-thumbnail">
+        <li class="product-thumbnail">
 
           <a href="last-of-the-big-tuskers/">
             <div class="clear">
