--- a/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
+++ b/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
@@ -50,7 +50,7 @@
   <div class="clear preview" id="preview-isilo">
     <a onclick="preview_isilo();">
       <div class="quote">
-        <img alt="Last of the Big Tuskers &ndash; Isilo [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" />
+        <img alt="Last of the Big Tuskers &ndash; Isilo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" />
         <p class="text-right gutter-side"><i>Isilo</i> &ndash; Tembe Elephant Park, South Africa</p>
 
       </div>
@@ -60,7 +60,7 @@
   <div class="clear preview" id="preview-kamboyo">
     <a onclick="preview_kamboyo();">
       <div class="quote">
-        <img alt="Last of the Big Tuskers &ndash; Kamboyo [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.1440-864.jpg" />
+        <img alt="Last of the Big Tuskers &ndash; Kamboyo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.1440-864.jpg" />
         <p class="text-right gutter-side"><i>Kamboyo</i> &ndash; Tsavo Conservation Area, Kenya</p>
 
       </div>
@@ -70,7 +70,7 @@
   <div class="clear preview" id="preview-masthulele">
     <a onclick="preview_masthulele();">
       <div class="quote">
-        <img alt="Last of the Big Tuskers &ndash; Masthulele [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.1440-864.jpg" />
+        <img alt="Last of the Big Tuskers &ndash; Masthulele [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.1440-864.jpg" />
         <p class="text-right gutter-side"><i>Masthulele</i> &ndash; Kruger National Park, South Africa</p>
 
       </div>
@@ -80,7 +80,7 @@
   <div class="clear preview" id="preview-one-ton">
     <a onclick="preview_one_ton();">
       <div class="quote">
-        <img alt="Last of the Big Tuskers &ndash; One Ton [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.1440-864.jpg" />
+        <img alt="Last of the Big Tuskers &ndash; One Ton [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.1440-864.jpg" />
         <p class="text-right gutter-side"><i>One Ton</i> &ndash; Chyulu Hills National Park, Kenya</p>
 
       </div>
@@ -90,7 +90,7 @@
   <div class="clear preview" id="preview-satao">
     <a onclick="preview_satao();">
       <div class="quote">
-        <img alt="Last of the Big Tuskers &ndash; Satao [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.1440-864.jpg" />
+        <img alt="Last of the Big Tuskers &ndash; Satao [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.1440-864.jpg" />
         <p class="text-right gutter-side"><i>Satao</i> &ndash; Tsavo East National Park, Kenya</p>
 
       </div>
@@ -100,7 +100,7 @@
   <div class="clear preview" id="preview-tim">
     <a onclick="preview_tim();">
       <div class="quote">
-        <img alt="Last of the Big Tuskers &ndash; Tim [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.1440-864.jpg" />
+        <img alt="Last of the Big Tuskers &ndash; Tim [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.1440-864.jpg" />
         <p class="text-right gutter-side"><i>Tim</i> &ndash; Amboseli National Park, Kenya</p>
 
       </div>
@@ -110,7 +110,7 @@
   <div class="clear preview" id="preview-craig">
     <a onclick="preview_craig();">
       <div class="quote">
-        <img alt="Last of the Big Tuskers &ndash; Craig [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.1440-864.jpg" />
+        <img alt="Last of the Big Tuskers &ndash; Craig [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.1440-864.jpg" />
         <p class="text-right gutter-side"><i>Craig</i> &ndash; Amboseli National Park, Kenya</p>
 
       </div>
@@ -120,25 +120,25 @@
   <section class="single">
     <div class="gutter-small clear-top clear-bottom polyptych ptych-fixed" id="preview-thumbnail">
       <div class="gutter-small">
-        <a onclick="preview_isilo();"><img alt="Last of the Big Tuskers &ndash; Isilo [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" /></a>
+        <a onclick="preview_isilo();"><img alt="Last of the Big Tuskers &ndash; Isilo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" /></a>
       </div>
       <div class="gutter-small">
-        <a onclick="preview_kamboyo();"><img alt="Last of the Big Tuskers &ndash; Kamboyo [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.300-180.jpg" /></a>
+        <a onclick="preview_kamboyo();"><img alt="Last of the Big Tuskers &ndash; Kamboyo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.300-180.jpg" /></a>
       </div>
       <div class="gutter-small">
-        <a onclick="preview_masthulele();"><img alt="Last of the Big Tuskers &ndash; Masthulele [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.300-180.jpg" /></a>
+        <a onclick="preview_masthulele();"><img alt="Last of the Big Tuskers &ndash; Masthulele [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.300-180.jpg" /></a>
       </div>
       <div class="gutter-small">
-        <a onclick="preview_one_ton();"><img alt="Last of the Big Tuskers &ndash; One Ton [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.300-180.jpg" /></a>
+        <a onclick="preview_one_ton();"><img alt="Last of the Big Tuskers &ndash; One Ton [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.300-180.jpg" /></a>
       </div>
       <div class="gutter-small">
-        <a onclick="preview_satao();"><img alt="Last of the Big Tuskers &ndash; Satao [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" /></a>
+        <a onclick="preview_satao();"><img alt="Last of the Big Tuskers &ndash; Satao [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" /></a>
       </div>
       <div class="gutter-small">
-        <a onclick="preview_tim();"><img alt="Last of the Big Tuskers &ndash; Tim [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.300-180.jpg" /></a>
+        <a onclick="preview_tim();"><img alt="Last of the Big Tuskers &ndash; Tim [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.300-180.jpg" /></a>
       </div>
       <div class="gutter-small">
-        <a onclick="preview_craig();"><img alt="Last of the Big Tuskers &ndash; Craig [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.300-180.jpg" /></a>
+        <a onclick="preview_craig();"><img alt="Last of the Big Tuskers &ndash; Craig [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.300-180.jpg" /></a>
       </div>
 
     </div>
