--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -53,7 +53,7 @@
     <article>
 
       <ul class="type-product polyptych">
-        <li class="post-1510 has-post-thumbnail">
+        <li class="post-1510 product-thumbnail">
 
           <a href="isilo/">
             <div class="clear">
@@ -68,7 +68,7 @@
 
         </li>
 
-        <!-- <li class="post-1505 has-post-thumbnail">
+        <!-- <li class="post-1505 product-thumbnail">
           <a href="kamboyo/">
             <div class="clear">
               <img alt="Last of the Big Tuskers (2018) &ndash; Kamboyo [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.300-180.jpg" />
@@ -78,7 +78,7 @@
           <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
         </li> -->
 
-        <!-- <li class="post-1507 has-post-thumbnail">
+        <!-- <li class="post-1507 product-thumbnail">
           <a href="masthulele/">
             <div class="clear">
               <img alt="Last of the Big Tuskers (2018) &ndash; Masthulele [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.300-180.jpg" />
@@ -88,7 +88,7 @@
           <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
         </li> -->
 
-        <!-- <li class="post-1508 has-post-thumbnail">
+        <!-- <li class="post-1508 product-thumbnail">
           <a href="one-ton/">
             <div class="clear">
               <img alt="Last of the Big Tuskers (2018) &ndash; One Ton [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.300-180.jpg" />
@@ -98,7 +98,7 @@
           <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
         </li> -->
 
-        <li class="post-1506 has-post-thumbnail">
+        <li class="post-1506 product-thumbnail">
 
           <a href="satao/">
             <div class="clear">
@@ -113,7 +113,7 @@
 
         </li>
 
-        <li class="post-1509 has-post-thumbnail">
+        <li class="post-1509 product-thumbnail">
 
           <a href="tim-and-craig/">
             <div class="clear">
@@ -133,7 +133,7 @@
 
         </li>
 
-        <!-- <li class="post-1497 has-post-thumbnail">
+        <!-- <li class="post-1497 product-thumbnail">
 
           <a href="craig/">
             <div class="clear">
