--- a/canon/index.html
+++ b/canon/index.html
@@ -59,7 +59,7 @@
 
       <div id="presskit">
         <h4 class="letterhead thin">September<font class="fr">&nbsp;&#92;&nbsp;Septembre</font> 2015</h4>
-        <h2 class="scene-one">Canon</h2>
+        <h2><font class="color-one">Canon</font></h2>
         <h5 class="author">Press secretary at<font class="fr">&nbsp;&#92;&nbsp;Secr&eacute;taire de presse chez</font> Animat Habitat</h5>
 
       </div>
