--- a/scene/one/companion-app-beta/index.html
+++ b/scene/one/companion-app-beta/index.html
@@ -28,9 +28,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Beta</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Beta</i></a></li>
     </ul>
   </nav>
 
@@ -38,7 +38,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">March 2024</h4>
-        <h2 class="scene-one">Companion App &ndash; Beta</h2>
+        <h2 class="color">Companion App &ndash; Beta</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
         <p class="linebreak"><i>This is a special announcement! The development office at Animat Habitat will begin a limited beta program in April 2025. And you are invited into a waiting room for our beta program, today. All you need is an Apple iOS or iPadOS device and an internet connection.</i></p>
@@ -102,8 +102,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../companion-app-augmented-reality-kit/" rel="prev"><font class="desktop">Augmented Reality Kit /</font><font class="mobile">Previous Article /</font></a>
-          <!-- <a class="nav-next" href="../companion-app-soundtrack/" rel="next"><font class="desktop">/ Companion App &ndash; Soundtrack</font><font class="mobile">/ Next Article</font></a> -->
+          <a class="nav-previous" href="../companion-app-augmented-reality-kit/" rel="prev"><font class="toggle-form-full">Augmented Reality Kit /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <!-- <a class="nav-next" href="../companion-app-soundtrack/" rel="next"><font class="toggle-form-full">/ Companion App &ndash; Soundtrack</font><font class="toggle-form-break">/ Next Article</font></a> -->
         </div>
       </div>
 
