--- a/scene/one/elephant-conservation-africa/index.html
+++ b/scene/one/elephant-conservation-africa/index.html
@@ -30,9 +30,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Elephant Conservation in Africa</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Elephant Conservation in Africa</i></a></li>
     </ul>
   </nav>
 
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">September 2014</h4>
-        <h2 class="scene-one">Elephant Conservation in Africa</h2>
+        <h2 class="color">Elephant Conservation in Africa</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
         <p class="linebreak"><i>On June 15th, wildlife filmmaker Mark Deeble submitted a final chapter for the story of <a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">Satao&mdash;a legend</a>. Thanks to Mark for sharing his account of the life and death of this magnificent bull elephant. Let the story of Satao be a chapter we learn from, and change the way we look at wildlife.</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Mark Deeble">1</a>]</sup></p>
@@ -160,8 +160,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../companion-app-augmented-reality/" rel="prev"><font class="desktop">Augmented Reality Application /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../reference-art/" rel="next"><font class="desktop">/ Reference Art &ndash; History</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../companion-app-augmented-reality/" rel="prev"><font class="toggle-form-full">Augmented Reality Application /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../reference-art/" rel="next"><font class="toggle-form-full">/ Reference Art &ndash; History</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
