--- a/scene/one/elephant-conservation-amboseli/index.html
+++ b/scene/one/elephant-conservation-amboseli/index.html
@@ -30,9 +30,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Elephant Conservation in Amboseli</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Elephant Conservation in Amboseli</i></a></li>
     </ul>
   </nav>
 
@@ -43,7 +43,7 @@
 
       <div>
         <h4 class="letterhead thin">June 2019</h4>
-        <h2 class="scene-one">On this Earth</h2>
+        <h2 class="color">On this Earth</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
         <p class="linebreak"><i>The making of <i>White Elephant</i> all began in summer of 2010</i>&mdash;<i>this was an animation class term project at the time, with a loose connection to Amboseli National Park. The Greater Amboseli ecosystem is a two million-acre area basking in the shadow of Mount Kilimanjaro, bordering southern Kenya and northern Tanzania. Amboseli is one of the richest wildlife areas that remain in Africa. The only connection to this animation project was a photograph. This is that photograph: this portrait of an elephant was applied as the front orthographic image plane in the making of a three-dimensional computer-generated model elephant, for example, for an animated short.</i></p>
@@ -203,8 +203,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation-nairobi/" rel="prev"><font class="desktop">Elephant Conservation in Nairobi /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../wildlife-documentary-2/" rel="next"><font class="desktop">/ Wildlife Documentary &ndash; Lights</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../elephant-conservation-nairobi/" rel="prev"><font class="toggle-form-full">Elephant Conservation in Nairobi /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../wildlife-documentary-2/" rel="next"><font class="toggle-form-full">/ Wildlife Documentary &ndash; Lights</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
