--- a/scene/one/history-of-elephants-charter/index.html
+++ b/scene/one/history-of-elephants-charter/index.html
@@ -28,9 +28,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>A History of Elephants &ndash; Charter</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>A History of Elephants &ndash; Charter</i></a></li>
     </ul>
   </nav>
 
@@ -38,7 +38,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">June 2018</h4>
-        <h2 class="scene-one">Charter for Elephants</h2>
+        <h2 class="color">Charter for Elephants</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
         <p class="linebreak"><i>From <a href="../../../url/-info/theelephantcharter/" title="The Elephant Charter" target="_blank" rel="noopener">The Elephant Charter</a>&mdash;from Joyce Poole and Petter Granli of <a href="../../../url/-org/elephantvoices/" title="Elephant Voices" target="_blank" rel="noopener">Elephant Voices</a> partnered with key elephant social behavior experts, and from a growing conviction held by elephant biologists that elephants are deserving of some form of Bill of Rights. Authors Joyce Poole, Cynthia Moss, Raman Sukumar, Andrea Turkalo and Katy Payne, together with other scientists and researchers, have contributed their time, expertise and support to further development of the document.</i></p>
@@ -310,8 +310,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../history-of-elephants-anatomy/" rel="prev"><font class="desktop">A History of Elephants &ndash; Anatomy /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../wildlife-documentary/" rel="next"><font class="desktop">/ Wildlife Documentary &ndash; Action</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../history-of-elephants-anatomy/" rel="prev"><font class="toggle-form-full">A History of Elephants &ndash; Anatomy /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../wildlife-documentary/" rel="next"><font class="toggle-form-full">/ Wildlife Documentary &ndash; Action</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
