--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -30,8 +30,8 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb scene scene-one"><a><i>White Elephant</i></a></li>
+      <li class="crumb logo color"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb scene color"><a><i>White Elephant</i></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
       <li class="right thin dark" id="currency"><a class="title" onclick="toggle_currency();" title="Animat Habitat in Canada, United States of America.">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
@@ -44,9 +44,9 @@
   <header>
     <div class="quote text-center">
       <h1 class="title">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></h1>
-      <h3 class="scene-one">Scene one:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un&nbsp;:</font></h3>
+      <h3>Scene one:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un&nbsp;:</font></h3>
       <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace-sp"> </font><font class="thin">Elephant</font></a></h1>
-      <h3><font class="clear">Comic book and companion app to change the way we look at wildlife.</font><font class="fr"> <br>Une bande dessin&eacute;e et l’app qui l’accompagne pour changer la fa&ccedil;on dont nous regardons la nature.</font></h3>
+      <h3><font class="clear">Comic book and companion app to change the way we look at wildlife.<font class="fr"><br>Une bande dessin&eacute;e et l’app qui l’accompagne pour changer la fa&ccedil;on dont nous regardons la nature.</font></font></h3>
     </div>
   </header>
 
@@ -78,7 +78,7 @@
     <section class="product single" id="scene">
 
       <div>
-        <h5 class="scene-one"><a class="color overscore" onclick="toggle_meta();">Comic Book</a><font class="fr">&nbsp;&#92;&nbsp;Bande dessin&eacute;e</font></h5>
+        <h5 class="color"><a class="color overscore" onclick="toggle_meta();">Comic Book</a><font class="fr">&nbsp;&#92;&nbsp;Bande dessin&eacute;e</font></h5>
         <div class="clear" id="p-meta">
           <!-- <p class="small">Designed with<font class="fr">&nbsp;&#92;&nbsp;Con&ccedil;u avec</font> .</p> -->
           <p class="small">Created in Canada.<font class="fr">&nbsp;&#92;&nbsp;Cr&eacute;&eacute; au Canada.</font></p>
@@ -218,94 +218,94 @@
     <article>
       <div class="project-broadcast quote">
 
-        <!-- <h3><a href="companion-app-beta/"><font class="scene-one">Companion App &ndash; Beta</font><font class="desktop"> &#47; <i>Technology</i></font></a></h3>
+        <!-- <h3><a href="companion-app-beta/"><font class="color">Companion App &ndash; Beta</font><font class="desktop"> &#47; <i>Technology</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="companion-app-augmented-reality-kit/"><font class="scene-one">Augmented Reality Kit</font><font class="desktop"> &#47; <i>Technology</i></font></a></h3>
+        <!-- <h3><a href="companion-app-augmented-reality-kit/"><font class="color">Augmented Reality Kit</font><font class="desktop"> &#47; <i>Technology</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="making-of-ella-4/"><font class="scene-one">Making of Ella Ch&nbsp;4: Visual Effects</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <!-- <h3><a href="making-of-ella-4/"><font class="color">Making of Ella Ch&nbsp;4: Visual Effects</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="elephant-conservation-angola/"><font class="scene-one">Elephant Conservation in Angola</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="elephant-conservation-angola/"><font class="color">Elephant Conservation in Angola</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <!-- <h3><a href="elephant-conservation-kavango/"><font class="scene-one">Reconnaissance in Kavango</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <!-- <h3><a href="elephant-conservation-kavango/"><font class="color">Reconnaissance in Kavango</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="elephant-conservation-zambezi/"><font class="scene-one">Elephant Conservation in Zambezi</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <!-- <h3><a href="elephant-conservation-zambezi/"><font class="color">Elephant Conservation in Zambezi</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="elephant-conservation-namibia/"><font class="scene-one">Elephant Conservation in Namibia</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <!-- <h3><a href="elephant-conservation-namibia/"><font class="color">Elephant Conservation in Namibia</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="elephant-conservation-botswana/"><font class="scene-one">Elephant Conservation in Botswana</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="elephant-conservation-botswana/"><font class="color">Elephant Conservation in Botswana</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="wildlife-documentary-2/"><font class="scene-one">Wildlife Documentary &ndash; Lights</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="wildlife-documentary-2/"><font class="color">Wildlife Documentary &ndash; Lights</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-amboseli/"><font class="scene-one">Elephant Conservation in Amboseli</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="elephant-conservation-amboseli/"><font class="color">Elephant Conservation in Amboseli</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-nairobi/"><font class="scene-one">Elephant Conservation in Nairobi</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="elephant-conservation-nairobi/"><font class="color">Elephant Conservation in Nairobi</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="wildlife-documentary-big-tuskers/"><font class="scene-one">Big Tuskers Documentary</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="wildlife-documentary-big-tuskers/"><font class="color">Big Tuskers Documentary</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="wildlife-documentary/"><font class="scene-one">Wildlife Documentary &ndash; Action</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="wildlife-documentary/"><font class="color">Wildlife Documentary &ndash; Action</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="history-of-elephants-charter/"><font class="scene-one">A History of Elephants &ndash; Charter</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="history-of-elephants-charter/"><font class="color">A History of Elephants &ndash; Charter</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="history-of-elephants-anatomy/"><font class="scene-one">A History of Elephants &ndash; Anatomy</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="history-of-elephants-anatomy/"><font class="color">A History of Elephants &ndash; Anatomy</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="wildlife-documentary-lens/"><font class="scene-one">Wildlife Documentary &ndash; Cameras</font><font class="desktop"> &#47; <i>Technology</i></font></a></h3>
+        <h3><a href="wildlife-documentary-lens/"><font class="color">Wildlife Documentary &ndash; Cameras</font><font class="desktop"> &#47; <i>Technology</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="history-of-elephants/"><font class="scene-one">A History of Elephants &ndash; Preface</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="history-of-elephants/"><font class="color">A History of Elephants &ndash; Preface</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <!-- <h3><a href="making-of-ella-3/"><font class="scene-one">Making of Ella Ch&nbsp;3: Elephant</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <!-- <h3><a href="making-of-ella-3/"><font class="color">Making of Ella Ch&nbsp;3: Elephant</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="book-of-ella-4/"><font class="scene-one">Book of Ella Ch&nbsp;4: Color</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="book-of-ella-4/"><font class="color">Book of Ella Ch&nbsp;4: Color</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-kenya/"><font class="scene-one">Elephant Conservation in Kenya</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="elephant-conservation-kenya/"><font class="color">Elephant Conservation in Kenya</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <!-- <h3><a href="making-of-ella-2/"><font class="scene-one">Making of Ella Ch&nbsp;2: Scene</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <!-- <h3><a href="making-of-ella-2/"><font class="color">Making of Ella Ch&nbsp;2: Scene</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="history-of-elephants-ivory/"><font class="scene-one">A History of Elephants &ndash; Ivory</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="history-of-elephants-ivory/"><font class="color">A History of Elephants &ndash; Ivory</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella-3/"><font class="scene-one">Book of Ella Ch&nbsp;3: Comic Panel</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="book-of-ella-3/"><font class="color">Book of Ella Ch&nbsp;3: Comic Panel</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella-2/"><font class="scene-one">Book of Ella Ch&nbsp;2: Comics</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="book-of-ella-2/"><font class="color">Book of Ella Ch&nbsp;2: Comics</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella/"><font class="scene-one">Book of Ella Ch&nbsp;1: Cover Story</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="book-of-ella/"><font class="color">Book of Ella Ch&nbsp;1: Cover Story</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="reference-art-2/"><font class="scene-one">Reference Art &ndash; Imagery</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="reference-art-2/"><font class="color">Reference Art &ndash; Imagery</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="reference-art/"><font class="scene-one">Reference Art &ndash; History</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="reference-art/"><font class="color">Reference Art &ndash; History</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-africa/"><font class="scene-one">Elephant Conservation in Africa</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="elephant-conservation-africa/"><font class="color">Elephant Conservation in Africa</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="companion-app-augmented-reality/"><font class="scene-one">Augmented Reality Application</font><font class="desktop"> &#47; <i>Technology</i></font></a></h3>
+        <h3><a href="companion-app-augmented-reality/"><font class="color">Augmented Reality Application</font><font class="desktop"> &#47; <i>Technology</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="making-of-ella/"><font class="scene-one">Making of Ella Ch&nbsp;1: Source</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="making-of-ella/"><font class="color">Making of Ella Ch&nbsp;1: Source</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
       </div>
