--- a/scene/one/wildlife-documentary-lens/index.html
+++ b/scene/one/wildlife-documentary-lens/index.html
@@ -28,9 +28,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Wildlife Documentary &ndash; Cameras</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Wildlife Documentary &ndash; Cameras</i></a></li>
     </ul>
   </nav>
 
@@ -38,7 +38,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">December 2017</h4>
-        <h2 class="scene-one">Wildlife Cinematography</h2>
+        <h2 class="color">Wildlife Cinematography</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
         <p class="linebreak"><i>The stories we are told in wildlife documentary films have mirrored a not-so-long history of long-lens camera technology. Operating out in the natural world behind the scenes of intimate moments that have been captured on film, such as in the British Broadcasting Corporation (BBC) Studios <i>Planet Earth</i> series, cameras have expanded our experiential understanding of the wild places and the animals that live in them. This article delves into a history of wildlife cinematography, or long-lens cinematography and photography, in general, as the craft pertains, in particular, to <i>White Elephant</i>&mdash;a journey with an elephant across a sea of sand.</i></p>
@@ -356,8 +356,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../history-of-elephants/" rel="prev"><font class="desktop">A History of Elephants &ndash; Preface /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../history-of-elephants-anatomy/" rel="next"><font class="desktop">/ A History of Elephants &ndash; Anatomy</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../history-of-elephants/" rel="prev"><font class="toggle-form-full">A History of Elephants &ndash; Preface /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../history-of-elephants-anatomy/" rel="next"><font class="toggle-form-full">/ A History of Elephants &ndash; Anatomy</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
