--- a/scene/two/history-of-the-forest-and-the-trees/index.html
+++ b/scene/two/history-of-the-forest-and-the-trees/index.html
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">June 2022</h4>
-        <h2 class="scene-two">The Forest Behind the Trees</h2>
+        <h2 class="color-two">The Forest Behind the Trees</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
         <p class="linebreak"><i>A Naturalist painting shares a new perspective. A unique perspective. Something that has not been seen before. A Naturalist painting does not just show another moose or yellow-bellied sapsucker&hellip; Another Amur tiger&hellip; Another North-Atlantic right whale. A Naturalist painting makes a statement of enough value to be worth making&mdash;to be worth the time that will be required to put paint on canvas and into perspective. There is a sense of environment or setting or space. The forest. The pines. And the air billowing between the trees.</i></p>
@@ -335,8 +335,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../siberian-tiger-project/" rel="prev"><font class="desktop">Tiger Conservation in Siberia /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../the-beginning-of-exhibiting/" rel="next"><font class="desktop">/ The Beginning of Exhibiting</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../siberian-tiger-project/" rel="prev"><font class="toggle-form-full">Tiger Conservation in Siberia /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../the-beginning-of-exhibiting/" rel="next"><font class="toggle-form-full">/ The Beginning of Exhibiting</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
