--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -45,7 +45,7 @@
   <header>
     <div class="quote text-center">
       <h1 class="title">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></h1>
-      <h3 class="scene-two">Scene two:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux&nbsp;:</font></h3>
+      <h3 class="color-two">Scene two:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux&nbsp;:</font></h3>
       <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace-sp"> </font><font class="thin">Tiger</font></a></h1>
       <h3><font class="clear">Oil painting of an Amur tiger in the taiga.</font><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l’huile d’un tigre de Sib&eacute;rie dans la ta&iuml;ga.</font></h3>
     </div>
@@ -80,7 +80,7 @@
     <section class="product single" id="scene">
 
       <div>
-        <h5 class="scene-two"><a class="color overscore" onclick="toggle_meta();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
+        <h5 class="color-two"><a class="color overscore" onclick="toggle_meta();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
         <div class="clear" id="p-meta">
           <p class="small">Painted with Gamblin artists colors on linen canvas. Created in Canada.<font class="fr">&nbsp;&#92;&nbsp;Peint avec des couleurs d'artistes Gamblin sur toile de lin. Cr&eacute;&eacute; au Canada.</font></p>
           <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
@@ -258,25 +258,25 @@
     <article>
       <div class="quote">
 
-        <!-- <h3><a href="history-of-rewilding/"><font class="scene-two">History of Rewilding</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <!-- <h3><a href="history-of-rewilding/"><font class="color-two">History of Rewilding</font><font class="toggle-form-full"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="the-beginning-of-printing/"><font class="scene-two">The Beginning of Printing</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <!-- <h3><a href="the-beginning-of-printing/"><font class="color-two">The Beginning of Printing</font><font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="the-beginning-of-exhibiting/"><font class="scene-two">The Beginning of Exhibiting</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <!-- <h3><a href="the-beginning-of-exhibiting/"><font class="color-two">The Beginning of Exhibiting</font><font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="history-of-the-forest-and-the-trees/"><font class="scene-two">A History of the Forest and the Trees</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="history-of-the-forest-and-the-trees/"><font class="color-two">A History of the Forest and the Trees</font><font class="toggle-form-full"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <!-- <h3><a href="tiger-conservation-siberia/"><font class="scene-two">Tiger Conservation in Siberia</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <!-- <h3><a href="tiger-conservation-siberia/"><font class="color-two">Tiger Conservation in Siberia</font><font class="toggle-form-full"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="the-beginning-of-chapter-two/"><font class="scene-two">The Beginning of Chapter Two</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="the-beginning-of-chapter-two/"><font class="color-two">The Beginning of Chapter Two</font><font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="the-beginning-of-painting/"><font class="scene-two">The Beginning of Painting</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="the-beginning-of-painting/"><font class="color-two">The Beginning of Painting</font><font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
       </div>
