--- a/scene/zero/index.html
+++ b/scene/zero/index.html
@@ -74,7 +74,7 @@
     <section class="product single" id="scene">
 
       <div>
-        <h5 class="scene-zero"><a class="color overscore" onclick="toggle_meta();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
+        <h5 class="color"><a class="color overscore" onclick="toggle_meta();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
         <div class="clear" id="p-meta">
           <p class="small">Painted with P&eacute;b&eacute;o oil colors on canvas.<font class="fr">&nbsp;&#92;&nbsp;Peint avec des couleurs &agrave; l'huile P&eacute;b&eacute;o sur toile.</font></p>
           <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
@@ -117,10 +117,10 @@
     <article>
       <div class="quote">
 
-        <h3><a href="northern-white-rhinoceros/">Northern White Rhinoceros<font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="northern-white-rhinoceros/">Northern White Rhinoceros<font class="toggle-form-full"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="../../url/git/danealeksander-art-international-baccalaureate/">Silver Studio Art Show<font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="../../url/git/danealeksander-art-international-baccalaureate/">Silver Studio Art Show<font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
       </div>
