--- a/support/index.html
+++ b/support/index.html
@@ -43,15 +43,15 @@
         <p><a href="../" title="Animat Habitat">Animat Habitat</a></p>
         <p>Animat Habitat <a href="../canon/" title="Animat Habitat canon.">Canon</a></p>
 
-        <h5 class="linebreak scene-one title">I&nbsp; White Elephant</h5>
+        <h5 class="linebreak title"><font class="color-one">I&nbsp; White Elephant</font></h5>
         <p>Animat Habitat <a href="../scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">Scene One</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un</font></p>
         <p>Animat Habitat Scene One &ndash; <a href="../scene/one/making-of-ella/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
 
-        <h5 class="linebreak scene-two title">II&nbsp; White Tiger</h5>
+        <h5 class="linebreak title"><font class="color-two">II&nbsp; White Tiger</font></h5>
         <p>Animat Habitat <a href="../scene/two/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">Scene Two</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux</font></p>
         <p>Animat Habitat Scene Two &ndash; <a href="../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
 
-        <!-- <h5 class="linebreak scene-three title">III&nbsp; White Bear</h5>
+        <!-- <h5 class="linebreak title"><font class="color-three">III&nbsp; White Bear</font></h5>
         <p>Animat Habitat <a href="../scene/three/" title="Animat Habitat scene three. &ndash;&nbsp;sc&egrave;ne trois.">Scene Three</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne trois</font></p>
         <p>Animat Habitat Scene Three &ndash; <a href="../scene/three/history-of-whales-north-atlantic-right-whale/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. A History of Whales, Northern Atlantic Right Whale.">A History of Whales</a> &hellip;</p> -->
 
