--- a/boutique/medium/giclee/isilo/index.html
+++ b/boutique/medium/giclee/isilo/index.html
@@ -50,7 +50,7 @@
 
       <a onclick="toggle_preview();">
         <div class="quote">
-          <img alt="Last of the Big Tuskers (2018) &ndash; Isilo [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" />
+          <img alt="Last of the Big Tuskers (2018) &ndash; Isilo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" />
 
         </div>
       </a>
