--- a/boutique/medium/giclee/satao/index.html
+++ b/boutique/medium/giclee/satao/index.html
@@ -51,7 +51,7 @@
 
       <a onclick="toggle_preview();">
         <div class="quote">
-          <img alt="Last of the Big Tuskers (2018) &ndash; Satao [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.1440-864.jpg" />
+          <img alt="Last of the Big Tuskers (2018) &ndash; Satao [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.1440-864.jpg" />
 
         </div>
       </a>
