--- a/boutique/medium/giclee/tim-and-craig/index.html
+++ b/boutique/medium/giclee/tim-and-craig/index.html
@@ -50,7 +50,7 @@
   <div class="clear preview" id="preview-tim">
     <a onclick="preview_tim();">
       <div class="quote">
-        <img alt="Last of the Big Tuskers &ndash; Tim [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.864.jpg" />
+        <img alt="Last of the Big Tuskers &ndash; Tim [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.864.jpg" />
         <p class="text-right gutter-side"><i>Tim</i> &ndash; Amboseli National Park, Kenya</p>
 
       </div>
@@ -60,7 +60,7 @@
   <div class="clear preview" id="preview-craig">
     <a onclick="preview_craig();">
       <div class="quote">
-        <img alt="Last of the Big Tuskers &ndash; Craig [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.864.jpg" />
+        <img alt="Last of the Big Tuskers &ndash; Craig [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.864.jpg" />
         <p class="text-right gutter-side"><i>Craig</i> &ndash; Amboseli National Park, Kenya</p>
 
       </div>
