--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <nav>
     <ul class="home">
       <li class="crumb dark logo"><a title="Animat Habitat"><img src="inc/svg/animat.mark.1.1.1200.dark.svg" class="logo" alt="Animat Mark (Dark) &copy; Animat Habitat, 2015" /></a></li>
-      <li class="crumb btn scene-one"><a href="scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb btn color-one"><a href="scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
       <!-- <li class="crumb btn scene-two"><a href="scene/two/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">II</a></li> -->
       <!-- <li class="crumb btn scene-three"><a href="scene/three/" title="Animat Habitat scene three. &ndash;&nbsp;sc&egrave;ne trois.">III</a></li> -->
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
@@ -65,10 +65,10 @@
       <div class="clear diptych">
 
         <div>
-          <a class="nav-block block-one" href="url/git/bigtuskers/" target="_blank" title="Last of the Big Tuskers (2018)">
+          <a class="nav-block" href="url/git/bigtuskers/" target="_blank" title="Last of the Big Tuskers (2018)">
             <img src="inc/img/last-of-the-big-tuskers/lotbt.poster.art.480-233.jpg" width="480" height="233" alt="Last of the Big Tuskers (documentary film, 2018) poster art." />
-            <div>
-              <h3><font class="scene-one">Last of the Big Tuskers (2018)</font></h3>
+            <div class="bg-one">
+              <h3><font class="color-one">Last of the Big Tuskers (2018)</font></h3>
               <p>A film by James Currie&mdash;a documentary about the challenges to save the last of the big tuskers in Tembe Elephant Park, South Africa.<font class="fr">&nbsp;&#92;&nbsp;Un film de James Currie &mdash; un documentaire sur les d&eacute;fis pour conserver les derniers des &eacute;l&eacute;phants &agrave; grosse d&eacute;fense &agrave; Tembe, Afrique du Sud.</font></p>
             </div>
 
@@ -77,10 +77,10 @@
         </div>
 
         <div>
-          <a class="nav-block block-one" href="scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">
+          <a class="nav-block" href="scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">
             <img src="inc/img/01/we.cover.banner.480-160.jpg" width="480" height="160" alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;&nbsp;art de couverture." />
-            <div>
-              <h3><font class="scene-one">I&nbsp; White Elephant (2024)</font></h3>
+            <div class="bg-one">
+              <h3><font class="color-one">I&nbsp; White Elephant (2024)</font></h3>
               <p>Journey with an elephant across a sea of sand&mdash;a comic book, a companion app and an invitation to change the way we look at wildlife.<font class="fr">&nbsp;&#92;&nbsp;Voyageons avec un &eacute;l&eacute;phant &agrave; travers une mer de sable &mdash; une bande dessin&eacute;e, une application compagnon et une invitation &agrave; changer la fa&ccedil;on dont nous regardons la nature.</font></p>
             </div>
 
