--- a/patron/index.html
+++ b/patron/index.html
@@ -96,7 +96,7 @@
       <div id="scene-one">
 
         <div>
-          <h5 class="scene-one">Scene One Selections<font class="fr">&nbsp;&#92;&nbsp;S&eacute;lections de sc&egrave;ne un</font></h5>
+          <h5><font class="color-one">Scene One Selections<font class="fr">&nbsp;&#92;&nbsp;S&eacute;lections de sc&egrave;ne un</font></font></h5>
           <p class="lineend">Through sales of <i>White Elephant</i> and the art of <i>White Elephant</i>, this first scene at Animat Habitat has directed more than CA$3,000 to 5 conservation projects across 3 countries&mdash;to date.<font class="fr">&nbsp;&#92;&nbsp;Gr&acirc;ce aux ventes de <i>&Eacute;l&eacute;phant blanc</i> et de l'art de <i>&Eacute;l&eacute;phant blanc</i>, cette premier sc&egrave;ne chez Animat Habitat &agrave; pu diriger de plus de 3 000 $ CA &agrave; 5 projets dans 3 pays &mdash; &agrave; ce jour.</font></p>
 
         </div>
@@ -143,7 +143,7 @@
       <!-- <div class="clear" id="scene-two">
 
         <div>
-          <p class="scene-two">Scene two official selections.<font class="fr">&nbsp;&#92;&nbsp;S&eacute;lections officielles avec sc&egrave;ne deux.</font></p>
+          <p class="color-two">Scene two official selections.<font class="fr">&nbsp;&#92;&nbsp;S&eacute;lections officielles avec sc&egrave;ne deux.</font></p>
 
         </div>
 
