--- a/scene/one/book-of-ella-2/index.html
+++ b/scene/one/book-of-ella-2/index.html
@@ -30,9 +30,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Book of Ella Ch&nbsp;2</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Book of Ella Ch&nbsp;2</i></a></li>
     </ul>
   </nav>
 
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">June 2015</h4>
-        <h2 class="scene-one">Book of Ella Ch&nbsp;2: Comic</h2>
+        <h2 class="color">Book of Ella Ch&nbsp;2: Comic</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
         <p class="linebreak"><i>A visual story represents time. Comics as a visual medium have a unique visual language that attempts to represent the other senses as well. Comic books are a great way to tell unique stories because a singular artistic voice can have choice over every moment, frame, image, letter and flow. Animat Habitat aims to honor these traditions of visual storytelling while leveraging the technology of today to explore new possibilities for the comic art form. For this, we reconsider interaction design in a visual story. We examine the requisite actions that a reader must take to advance through a story. And we weigh the implication that each action may have on the story on behalf of the reader.</i></p>
@@ -210,8 +210,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-        <a class="nav-previous" href="../book-of-ella/" rel="prev"><font class="desktop">Book of Ella Ch&nbsp;1 /</font><font class="mobile">Previous Article /</font></a>
-        <a class="nav-next" href="../book-of-ella-3/" rel="next"><font class="desktop">/ Book of Ella Ch&nbsp;3</font><font class="mobile">/ Next Article</font></a>
+        <a class="nav-previous" href="../book-of-ella/" rel="prev"><font class="toggle-form-full">Book of Ella Ch&nbsp;1 /</font><font class="toggle-form-break">Previous Article /</font></a>
+        <a class="nav-next" href="../book-of-ella-3/" rel="next"><font class="toggle-form-full">/ Book of Ella Ch&nbsp;3</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
