--- a/scene/one/book-of-ella-3/index.html
+++ b/scene/one/book-of-ella-3/index.html
@@ -30,9 +30,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Book of Ella Ch&nbsp;3</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Book of Ella Ch&nbsp;3</i></a></li>
     </ul>
   </nav>
 
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">June 2015</h4>
-        <h2 class="scene-one">Book of Ella Ch&nbsp;3: Comic Panel</h2>
+        <h2 class="color">Book of Ella Ch&nbsp;3: Comic Panel</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
         <p class="linebreak"><i>This article is continued from Book of Ella Ch&nbsp;2: <a href="../book-of-ella-2/">Comics</a>. That second chapter was an introduction to the elements of comics inherent to the visual storytelling medium, which have transcended the history of the art form. This next chapter shares a closer look at two core elements in the art of comics: the frame and the letter.</i></p>
@@ -189,8 +189,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../book-of-ella-2/" rel="prev"><font class="desktop">Book of Ella Ch&nbsp;2 /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../history-of-elephants-ivory/" rel="next"><font class="desktop">/ A History of Elephants &ndash; Ivory</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../book-of-ella-2/" rel="prev"><font class="toggle-form-full">Book of Ella Ch&nbsp;2 /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../history-of-elephants-ivory/" rel="next"><font class="toggle-form-full">/ A History of Elephants &ndash; Ivory</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
