--- a/scene/one/book-of-ella-4/index.html
+++ b/scene/one/book-of-ella-4/index.html
@@ -28,9 +28,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Book of Ella Ch&nbsp;4</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Book of Ella Ch&nbsp;4</i></a></li>
     </ul>
   </nav>
 
@@ -38,7 +38,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">December 2016</h4>
-        <h2 class="scene-one">Book of Ella Ch&nbsp;4: Color</h2>
+        <h2 class="color">Book of Ella Ch&nbsp;4: Color</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
       </div>
@@ -168,8 +168,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation-kenya/" rel="prev"><font class="desktop">Elephant Conservation in Kenya /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../making-of-ella-3/" rel="next"><font class="desktop">/ Making of Ella Ch&nbsp;3</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../elephant-conservation-kenya/" rel="prev"><font class="toggle-form-full">Elephant Conservation in Kenya /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../making-of-ella-3/" rel="next"><font class="toggle-form-full">/ Making of Ella Ch&nbsp;3</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
