--- a/scene/one/book-of-ella/index.html
+++ b/scene/one/book-of-ella/index.html
@@ -28,9 +28,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Book of Ella Ch&nbsp;1</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Book of Ella Ch&nbsp;1</i></a></li>
     </ul>
   </nav>
 
@@ -41,7 +41,7 @@
 
       <div>
         <h4 class="letterhead thin">March 2015</h4>
-        <h2 class="scene-one">Book of Ella Ch&nbsp;1: Cover Story</h2>
+        <h2 class="color">Book of Ella Ch&nbsp;1: Cover Story</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
       </div>
 
@@ -145,8 +145,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../reference-art-2/" rel="prev"><font class="desktop">Reference Art &ndash; Imagery /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../book-of-ella-2/" rel="next"><font class="desktop">/ Book of Ella Ch&nbsp;2</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../reference-art-2/" rel="prev"><font class="toggle-form-full">Reference Art &ndash; Imagery /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../book-of-ella-2/" rel="next"><font class="toggle-form-full">/ Book of Ella Ch&nbsp;2</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
