--- a/scene/one/companion-app-augmented-reality-kit/index.html
+++ b/scene/one/companion-app-augmented-reality-kit/index.html
@@ -28,9 +28,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Augmented Reality Kit</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Augmented Reality Kit</i></a></li>
     </ul>
   </nav>
 
@@ -38,7 +38,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">December 2023</h4>
-        <h2 class="scene-one">Where is Augmented Reality?</h2>
+        <h2 class="color">Where is Augmented Reality?</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat.</h5>
 
         <!-- <p class="linebreak"><i>This article is an update to an earlier broadcast: <a href="../companion-app-augmented-reality/">What is Augmented Reality?</a></i></p> -->
@@ -53,8 +53,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../making-of-ella-4/" rel="prev"><font class="desktop">Making of Ella Ch&nbsp;4 /</font><font class="mobile">Previous Article /</font></a>
-          <!-- <a class="nav-next" href="../companion-app-beta/" rel="next"><font class="desktop">/ Companion App &ndash;&nbsp;Beta</font><font class="mobile">/ Next Article</font></a> -->
+          <a class="nav-previous" href="../making-of-ella-4/" rel="prev"><font class="toggle-form-full">Making of Ella Ch&nbsp;4 /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <!-- <a class="nav-next" href="../companion-app-beta/" rel="next"><font class="toggle-form-full">/ Companion App &ndash;&nbsp;Beta</font><font class="toggle-form-break">/ Next Article</font></a> -->
         </div>
       </div>
 
