--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -30,9 +30,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Elephant Conservation in Botswana</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Elephant Conservation in Botswana</i></a></li>
     </ul>
   </nav>
 
@@ -43,7 +43,7 @@
 
       <div>
         <h4 class="letterhead thin">June 2020</h4>
-        <h2 class="scene-one">Elephant Corridors</h2>
+        <h2 class="color">Elephant Corridors</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
         <p class="linebreak"><i>Botswana has the largest number of savanna elephants in Africa today. While most African elephant populations have decreased due to poaching, urban expansion and landscape fragmentation, the elephant population in and around 115,000 square kilometres range in northern Botswana has remained stable.</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Chase et al, 2017">1</a>]</sup></p>
@@ -245,8 +245,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../wildlife-documentary-2/" rel="prev"><font class="desktop">Wildlife Documentary &ndash; Lights /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../elephant-conservation-namibia/" rel="next"><font class="desktop">/ Elephant Conservation in Namibia</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../wildlife-documentary-2/" rel="prev"><font class="toggle-form-full">Wildlife Documentary &ndash; Lights /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../elephant-conservation-namibia/" rel="next"><font class="toggle-form-full">/ Elephant Conservation in Namibia</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
