--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -30,9 +30,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Elephant Conservation in Kenya</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Elephant Conservation in Kenya</i></a></li>
     </ul>
   </nav>
 
@@ -41,7 +41,7 @@
 
       <div>
         <h4 class="letterhead thin">June 2016</h4>
-        <h2 class="scene-one">Hands Off Elephants in Kenya</h2>
+        <h2 class="color">Hands Off Elephants in Kenya</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
       </div>
 
@@ -198,8 +198,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../making-of-ella-2/" rel="prev"><font class="desktop">Making of Ella Ch&nbsp;2 /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../book-of-ella-4/" rel="next"><font class="desktop">/ Book of Ella Ch&nbsp;4</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../making-of-ella-2/" rel="prev"><font class="toggle-form-full">Making of Ella Ch&nbsp;2 /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../book-of-ella-4/" rel="next"><font class="toggle-form-full">/ Book of Ella Ch&nbsp;4</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
