--- a/scene/one/elephant-conservation-zambezi/index.html
+++ b/scene/one/elephant-conservation-zambezi/index.html
@@ -28,9 +28,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Elephant Conservation in Zambezi</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Elephant Conservation in Zambezi</i></a></li>
     </ul>
   </nav>
 
@@ -38,7 +38,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">March 2021</h4>
-        <h2 class="scene-one">The Last Elephants in Caprivi (cont'd)</h2>
+        <h2 class="color">The Last Elephants in Caprivi (cont'd)</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
       </div>
@@ -51,8 +51,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation-namibia/" rel="prev"><font class="desktop">Elephant Conservation in Namibia /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../elephant-conservation-kavango/" rel="next"><font class="desktop">/ Reconnaissance in Kavango</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../elephant-conservation-namibia/" rel="prev"><font class="toggle-form-full">Elephant Conservation in Namibia /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../elephant-conservation-kavango/" rel="next"><font class="toggle-form-full">/ Reconnaissance in Kavango</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
