--- a/scene/one/history-of-elephants-anatomy/index.html
+++ b/scene/one/history-of-elephants-anatomy/index.html
@@ -30,9 +30,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>A History of Elephants &ndash; Anatomy</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>A History of Elephants &ndash; Anatomy</i></a></li>
     </ul>
   </nav>
 
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">March 2018</h4>
-        <h2 class="scene-one">Anatomy of an Elephant</h2>
+        <h2 class="color">Anatomy of an Elephant</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat.</h5>
 
         <p class="linebreak"><i>This article is continued from <a href="../history-of-elephants/" title="A History of Elephants (Preface)">A History of Elephants</a>.</i></p>
@@ -245,8 +245,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../wildlife-documentary-lens/" rel="prev"><font class="desktop">Wildlife Documentary &ndash; Cameras /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../history-of-elephants-charter/" rel="next"><font class="desktop">/ A History of Elephants &ndash; Charter</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../wildlife-documentary-lens/" rel="prev"><font class="toggle-form-full">Wildlife Documentary &ndash; Cameras /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../history-of-elephants-charter/" rel="next"><font class="toggle-form-full">/ A History of Elephants &ndash; Charter</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
