--- a/scene/one/history-of-elephants-ivory/index.html
+++ b/scene/one/history-of-elephants-ivory/index.html
@@ -28,9 +28,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>A History of Elephants &ndash; Ivory</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>A History of Elephants &ndash; Ivory</i></a></li>
     </ul>
   </nav>
 
@@ -38,7 +38,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">December 2015</h4>
-        <h2 class="scene-one">A History of Elephant Conservation</h2>
+        <h2 class="color">A History of Elephant Conservation</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
         <p class="linebreak"><i>This article takes a look back at a human history of our natural world with elephants&hellip; When a worldwide ban on ivory sales in 1989 led to a rebound in the population, to about a million&hellip; Then in 1999 and 2008, due to pressure from countries in Asia and southern Africa, when the Convention on International Trade in Endangered Species allowed two sanctioned sales of ivory&hellip; Up until today, when the state of elephants in the world is not as it was decades ago and centuries ago and so on.</i></p>
@@ -447,8 +447,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../book-of-ella-3/" rel="prev"><font class="desktop">Book of Ella Ch&nbsp;3 /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../making-of-ella-2/" rel="next"><font class="desktop">/ Making of Ella Ch&nbsp;2</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../book-of-ella-3/" rel="prev"><font class="toggle-form-full">Book of Ella Ch&nbsp;3 /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../making-of-ella-2/" rel="next"><font class="toggle-form-full">/ Making of Ella Ch&nbsp;2</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
