--- a/scene/one/history-of-elephants/index.html
+++ b/scene/one/history-of-elephants/index.html
@@ -30,9 +30,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>A History of Elephants &ndash; Preface</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>A History of Elephants &ndash; Preface</i></a></li>
     </ul>
   </nav>
 
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">June 2017</h4>
-        <h2 class="scene-one">A History of Elephants</h2>
+        <h2 class="color">A History of Elephants</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
         <p class="linebreak"><i>This is a history of elephants&mdash;not simply a list of reasons why we must conserve elephants in the wild. Alone, a list of reasons to conserve elephants in the wild does not propose a resolution. We the people must resolve to conserve elephants and the wild places where they inhabit. Elephants are kind of like a big deal. Here is a history of elephants to tell your friends about.</i></p>
@@ -189,8 +189,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../making-of-ella-3/" rel="prev"><font class="desktop">Making of Ella Ch&nbsp;3 /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../wildlife-documentary-lens/" rel="next"><font class="desktop">/ Wildlife Documentary &ndash; Cameras</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../making-of-ella-3/" rel="prev"><font class="toggle-form-full">Making of Ella Ch&nbsp;3 /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../wildlife-documentary-lens/" rel="next"><font class="toggle-form-full">/ Wildlife Documentary &ndash; Cameras</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
