--- a/scene/one/making-of-ella-3/index.html
+++ b/scene/one/making-of-ella-3/index.html
@@ -28,9 +28,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Making of Ella Ch&nbsp;3</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Making of Ella Ch&nbsp;3</i></a></li>
     </ul>
   </nav>
 
@@ -38,7 +38,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">March 2017</h4>
-        <h2 class="scene-one">Making of Ella Ch&nbsp;3: Elephant</h2>
+        <h2 class="color">Making of Ella Ch&nbsp;3: Elephant</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat.</h5>
 
         <p class="linebreak"><i>Elephants are an umbrella species. They are ecosystem engineers. Biodiversity cascades from their presence. Elephants are a keystone species in Africa. The elephant is an iconic symbol of the continent. When we think of Africa, we most often think of elephants. They are a symbol of power and strength, memory and wisdom, good luck and so on. If we as a people are unable, or unwilling, to save the smartest, largest, greatest land-living mammal in the world &ndash; a species that has roamed the earth for millions of years &ndash; then it is unclear what hope remains for other animals. This is where our story begins.</i></p>
@@ -120,8 +120,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../book-of-ella-4/" rel="prev"><font class="desktop">Book of Ella Ch&nbsp;4 /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../history-of-elephants/" rel="next"><font class="desktop">/ A History of Elephants &ndash; Preface</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../book-of-ella-4/" rel="prev"><font class="toggle-form-full">Book of Ella Ch&nbsp;4 /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../history-of-elephants/" rel="next"><font class="toggle-form-full">/ A History of Elephants &ndash; Preface</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
