--- a/scene/one/making-of-ella-4/index.html
+++ b/scene/one/making-of-ella-4/index.html
@@ -28,9 +28,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Making of Ella Ch&nbsp;4</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Making of Ella Ch&nbsp;4</i></a></li>
     </ul>
   </nav>
 
@@ -38,7 +38,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">June 2023</h4>
-        <h2 class="scene-one">Making of Ella Ch&nbsp;4: Visual Effects</h2>
+        <h2 class="color">Making of Ella Ch&nbsp;4: Visual Effects</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat.</h5>
       </div>
 
@@ -50,8 +50,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation-angola/" rel="prev"><font class="desktop">Ghost Elephants in Angola /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../companion-app-augmented-reality-kit/" rel="next"><font class="desktop">/ Augmented Reality Kit</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../elephant-conservation-angola/" rel="prev"><font class="toggle-form-full">Ghost Elephants in Angola /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../companion-app-augmented-reality-kit/" rel="next"><font class="toggle-form-full">/ Augmented Reality Kit</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
