--- a/scene/one/making-of-ella/index.html
+++ b/scene/one/making-of-ella/index.html
@@ -30,9 +30,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Making of Ella Ch&nbsp;1</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Making of Ella Ch&nbsp;1</i></a></li>
     </ul>
   </nav>
 
@@ -44,7 +44,7 @@
 
       <div>
         <h4 class="letterhead thin">March 2014</h4>
-        <h2 class="scene-one">Making of Ella Ch&nbsp;1: Source</h2>
+        <h2 class="color">Making of Ella Ch&nbsp;1: Source</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat.</h5>
 
         <p class="linebreak"><i>Each year, Southern Africa's Kalahari Desert hosts the largest collective land migration on Earth, as the Okavango river becomes a vast, inland delta. The freshly flooded swamps welcome an array of intercontinental species to Botswana. None travels farther than the elephant. The journey for many elephants of southern Africa is of epic proportions. Over hundreds of miles, spanning several weeks at the peak of dry season, the herds are on the move&mdash;on an urgent quest for water. The desert can be insatiable. Dust swirling across the barren landscape can shield stragglers from the herd. More than ever, the young and the fatigued are in severe risk of becoming dehydrated and being separated from the matriarch elephants, who have journeyed across the great plains in dry seasons before.</i></p>
@@ -124,7 +124,7 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-next" href="../companion-app-augmented-reality/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Augmented Reality Application</font></a>
+          <a class="nav-next" href="../companion-app-augmented-reality/" rel="next"><font class="toggle-form-break">/ Next Article</font><font class="toggle-form-full">/ Augmented Reality Application</font></a>
         </div>
       </div>
 
