--- a/scene/one/reference-art-2/index.html
+++ b/scene/one/reference-art-2/index.html
@@ -30,9 +30,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Reference Art &ndash; Imagery</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Reference Art &ndash; Imagery</i></a></li>
     </ul>
   </nav>
 
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">December 2014</h4>
-        <h2 class="scene-one">Reference Art (cont'd)</h2>
+        <h2 class="color">Reference Art (cont'd)</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat.</h5>
 
         <p class="linebreak"><i>This article is continued from Reference Art &ndash; <a href="../reference-art/" title="Reference for White Elephant">History</a>. This second part looks at some of the voices and pictures that helped inspire the comic book, companion app and invitation to change the way we look at wildlife&mdash;<a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">White Elephant</a>.</i></p>
@@ -163,8 +163,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../reference-art/" rel="prev"><font class="desktop">Reference Art &ndash; History /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../book-of-ella/" rel="next"><font class="desktop">/ Book of Ella Ch&nbsp;1</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../reference-art/" rel="prev"><font class="toggle-form-full">Reference Art &ndash; History /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../book-of-ella/" rel="next"><font class="toggle-form-full">/ Book of Ella Ch&nbsp;1</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
