--- a/scene/one/reference-art/index.html
+++ b/scene/one/reference-art/index.html
@@ -30,9 +30,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Reference Art &ndash; History</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Reference Art &ndash; History</i></a></li>
     </ul>
   </nav>
 
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">December 2014</h4>
-        <h2 class="scene-one">Reference Art</h2>
+        <h2 class="color">Reference Art</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat.</h5>
 
         <p class="linebreak"><i>In the making of <a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">White Elephant</a>&mdash;a comic book, a companion app and an invitation to change the way we look at wildlife&mdash;I have had a number of influences. This article introduces the project through its roots in art and story. In storytelling, like in design, we communicate with imagery that is familiar, symbolic and even iconic to drive focus to specific details carrying a unique visual tone. Here are some of the artworks that have championed the culture and design of wildlife art.</i></p>
@@ -189,8 +189,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation-africa/" rel="prev"><font class="desktop">Elephant Conservation in Africa /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../reference-art-2/" rel="next"><font class="desktop">/ Reference Art &ndash; Imagery</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../elephant-conservation-africa/" rel="prev"><font class="toggle-form-full">Elephant Conservation in Africa /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../reference-art-2/" rel="next"><font class="toggle-form-full">/ Reference Art &ndash; Imagery</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
