--- a/scene/one/wildlife-documentary-2/index.html
+++ b/scene/one/wildlife-documentary-2/index.html
@@ -30,9 +30,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Wildlife Documentary &ndash; Lights</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Wildlife Documentary &ndash; Lights</i></a></li>
     </ul>
   </nav>
 
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">December 2019</h4>
-        <h2 class="scene-one">Wildlife Documentary (cont'd)</h2>
+        <h2 class="color">Wildlife Documentary (cont'd)</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
         <p class="linebreak"><i>This article is continued from Wildlife Documentary &ndash; <a href="../wildlife-documentary/">Action</a>. Whereas the &lsquo;action&rsquo; set of documentary films was selected based on a call to action, this &lsquo;lights&rsquo; set was selected based on a best picture. This pair of picturesque documentary films both shine a light on the plight of the natural world, each telling an authentic story with awesome imagery. Here is a look at two documentaries: <i>The Elephant Queen</i> (2018) and <i>Into the Okavango</i> (2018). <i>The Elephant Queen</i> is a story from Mark Deeble and Victoria Stone, to be published with the release of Apple TV Plus. <i>Into the Okavango</i> is about a project led by Dr Steve Boyes, filmed by Neil Gelinas, and produced by National Geographic Documentary Films to be published on the National Geographic channel with Disney Plus.</i></p>
@@ -159,8 +159,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../elephant-conservation-amboseli/" rel="prev"><font class="desktop">Elephant Conservation in Amboseli /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../elephant-conservation-botswana/" rel="next"><font class="desktop">/ Elephant Conservation in Botswana</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../elephant-conservation-amboseli/" rel="prev"><font class="toggle-form-full">Elephant Conservation in Amboseli /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../elephant-conservation-botswana/" rel="next"><font class="toggle-form-full">/ Elephant Conservation in Botswana</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
