--- a/scene/one/wildlife-documentary-big-tuskers/index.html
+++ b/scene/one/wildlife-documentary-big-tuskers/index.html
@@ -30,9 +30,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Wildlife Documentary &ndash; Feature</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Wildlife Documentary &ndash; Feature</i></a></li>
     </ul>
   </nav>
 
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">December 2018</h4>
-        <h2 class="scene-one">Last of the Big Tuskers</h2>
+        <h2 class="color">Last of the Big Tuskers</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
         <p class="linebreak"><i>This article is continued from Wildlife Documentary &ndash; <a href="../wildlife-documentary/">Action</a>. This &lsquo;action&rsquo; set features a last documentary: <i>Last of the Big Tuskers</i>&mdash;a film by James Currie. The film entered festivals in 2018.</i></p>
@@ -135,8 +135,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../wildlife-documentary/" rel="prev"><font class="desktop">Wildlife Documentary &ndash; Action /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../elephant-conservation-nairobi/" rel="next"><font class="desktop">/ Elephant Conservation in Nairobi</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../wildlife-documentary/" rel="prev"><font class="toggle-form-full">Wildlife Documentary &ndash; Action /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../elephant-conservation-nairobi/" rel="next"><font class="toggle-form-full">/ Elephant Conservation in Nairobi</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
