--- a/scene/one/wildlife-documentary/index.html
+++ b/scene/one/wildlife-documentary/index.html
@@ -30,9 +30,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><i>Wildlife Documentary &ndash; Action</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb scene color"><a><i>Wildlife Documentary &ndash; Action</i></a></li>
     </ul>
   </nav>
 
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">December 2018</h4>
-        <h2 class="scene-one">Wildlife Documentary</h2>
+        <h2 class="color">Wildlife Documentary</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
         <p class="linebreak"><i>This article shares a study of the natural world as represented in documentary film. This study has focused on the message, narrative and perspective of each film, ultimately communicating the plight of the natural world. Each of the following documentaries has an important story to tell, each story has a unique perspective to show, and each film has applied a part of that unique perspective within its story with some success.</i></p>
@@ -270,8 +270,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../history-of-elephants-charter/" rel="prev"><font class="desktop">A History of Elephants &ndash; Charter /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../wildlife-documentary-big-tuskers/" rel="next"><font class="desktop">/ Wildlife Documentary &ndash; Feature</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../history-of-elephants-charter/" rel="prev"><font class="toggle-form-full">A History of Elephants &ndash; Charter /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../wildlife-documentary-big-tuskers/" rel="next"><font class="toggle-form-full">/ Wildlife Documentary &ndash; Feature</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
