--- a/scene/two/the-beginning-of-exhibition/index.html
+++ b/scene/two/the-beginning-of-exhibition/index.html
@@ -38,7 +38,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">March 2023</h4>
-        <h2 class="scene-two">Exhibition of Art</h2>
+        <h2 class="color-two">Exhibition of Art</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
       </div>
@@ -51,8 +51,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../history-of-the-forest-and-the-trees/" rel="prev"><font class="desktop">The Forest Behind the Trees /</font><font class="mobile">Previous Article /</font></a>
-          <a class="nav-next" href="../the-beginning-of-printing/" rel="next"><font class="desktop">/ The Beginning of Printing</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-previous" href="../history-of-the-forest-and-the-trees/" rel="prev"><font class="toggle-form-full">The Forest Behind the Trees /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../the-beginning-of-printing/" rel="next"><font class="toggle-form-full">/ The Beginning of Printing</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
