--- a/scene/two/the-beginning-of-painting/index.html
+++ b/scene/two/the-beginning-of-painting/index.html
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">March 2020</h4>
-        <h2 class="scene-two">The End of Painting</h2>
+        <h2 class="color-two">The End of Painting</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
         <p class="linebreak"><i>Enter scene two. Soviet state, 1920. Open with two of the most prolific artists at the time &mdash; partners in business and in marriage Aleksandr Rodchenko and Varvara Stepanova.</i></p>
@@ -124,7 +124,7 @@
       </div>
 
       <div class="clear">
-        <div class="clear ptych-center triptych ptych-fixed" class="color-white">
+        <div class="clear ptych-center triptych ptych-fixed" class="bg-white">
           <div class="clear-left clear-bottom ptych-left ptych-bottom">
             <img alt="" src="https://animathabitat.com/inc/img/~02/color/gamblin.old-masters-palette.300x228.jpg" />
 
@@ -264,8 +264,8 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <!-- <a class="nav-previous" href="../technology-lens/" rel="prev"><font class="desktop">Wildlife Documentary &ndash; Picture /</font><font class="mobile">Previous Article /</font></a> -->
-          <a class="nav-next" href="../the-beginning-of-chapter-two/" rel="next"><font class="desktop">/ The Beginning of Chapter Two</font><font class="mobile">/ Next Article</font></a>
+          <!-- <a class="nav-previous" href="../technology-lens/" rel="prev"><font class="toggle-form-full">Wildlife Documentary &ndash; Picture /</font><font class="toggle-form-break">Previous Article /</font></a> -->
+          <a class="nav-next" href="../the-beginning-of-chapter-two/" rel="next"><font class="toggle-form-full">/ The Beginning of Chapter Two</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
