--- a/societas/r/confirmation/1/index.html
+++ b/societas/r/confirmation/1/index.html
@@ -26,7 +26,7 @@
     <ul class="page">
       <li class="crumb dark logo"><a href="../../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb dark"><a href="../../" title="Animat Habitat societ&amacr;s.">Societ&amacr;s</a></li>
-      <li class="crumb scene dark"><a><i>Welcome<font class="desktop"> &ndash; Bienvenue</font></i></a></li>
+      <li class="crumb scene dark"><a><i>Welcome<font class="toggle-form-full"> &ndash; Bienvenue</font></i></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
@@ -40,11 +40,11 @@
         <h5 class="linebreak">You have registered successfully.<font class="fr">&nbsp;&#92;&nbsp;Vous vous &ecirc;tes bien inscrit.</font></h5>
         <p>For active and select council members, you can find documents of the organization archived and classified in the Animat Habitat <a href="../../../" title="Animat Habitat societ&amacr;s.">Member Handbook</a>. For members of a project broadcast, a behind-the-scenes campaign will be delivered to your inbox in advance of project publications. You can find articles at Animat Habitat archived on the project pages.<font class="fr">&nbsp;&#92;&nbsp;Pour les membres actifs, retrouvez les documents d'organisation archiv&eacute;s et class&eacute;s dans le manuel des membres Animat Habitat. Pour les membres des mises &agrave; jour d'un projet, la campagne dans les coulisses sera livr&eacute;e &agrave; votre address e-mail en avance de la publication du projet. Veuillez trouver les articles chez Animat Habitat archiv&eacute;s sur les pages du projet.</font></p>
 
-        <h5 class="linebreak scene-one title">I. White Elephant</h5>
+        <h5 class="linebreak title"><font class="color-one">I. White Elephant</font></h5>
         <p>Animat Habitat <a href="../../../../scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">Scene One</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un</font></p>
         <p>Animat Habitat Scene One &ndash; <a href="../../../../scene/one/making-of-ella/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
 
-        <h5 class="linebreak scene-two title">II. White Tiger</h5>
+        <h5 class="linebreak title"><font class="color-two">II. White Tiger</font></h5>
         <p>Animat Habitat <a href="../../../../scene/two/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">Scene Two</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux</font></p>
         <p>Animat Habitat Scene Two &ndash; <a href="../../../../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
 
